--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,3 +3,28 @@
 @tailwind components;
 @tailwind utilities;
 
+.btn {
+  @apply font-bold py-2 px-4 rounded transition ease-out duration-500;
+}
+.btn:active {
+  @apply shadow shadow-gray-700 transition ease-out duration-200;
+}
+
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
+
+.invalid {
+  @apply border-red-300 text-red-400;
+}
+
+.success {
+  @apply border-green-400 text-green-700;;
+}
+
+.message .icon {
+  @apply text-4xl;
+}
